ifcviewer/ifcengine/include/ifcengine.h


#define		sdaiADB					1
#define		sdaiAGGR				sdaiADB + 1
#define		sdaiINSTANCE			sdaiENUM + 1
#define		sdaiINTEGER				sdaiINSTANCE + 1
#define		engiTypeFlagAggr		128
#define		engiTypeFlagAggrOption	32
typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiPrimitiveType;
void			DECL * STDC	sdaiGetAttrBN(
									SdaiInstance			instance,
									const char				* attributeName,
									SdaiPrimitiveType		valueType,
									void					* value
								);
static	inline	void	* sdaiGetAttrBN(
								SdaiInstance			instance,
								char					* attributeName,
								SdaiPrimitiveType		valueType,
								void					* value
							)
{
	return	sdaiGetAttrBN(
					instance,
					(const char*) attributeName,
					valueType,
					value
				);
}
SdaiAggr		DECL STDC	sdaiGetAggregationAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiAggr	sdaiGetAggregationAttrBN(
									SdaiInstance			instance,
									char					* attributeName
								)
{
	return	sdaiGetAggregationAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiAttr		DECL STDC	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiAttr	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									char					* attributeName
								)
{
	return	sdaiGetAttrDefinition(
					entity,
					(const char*) attributeName
				);
}
SdaiEntity		DECL STDC	sdaiGetInstanceType(
									SdaiInstance			instance
								);
SdaiInteger		DECL STDC	sdaiGetMemberCount(
									SdaiAggr				aggregate
								);
int_t			DECL STDC	sdaiIsKindOf(
									SdaiInstance			instance,
									SdaiEntity				entity
								);
int_t			DECL STDC	sdaiIsKindOfBN(
									SdaiInstance			instance,
									const char				* entityName
								);
static	inline	int_t	sdaiIsKindOfBN(
								SdaiInstance			instance,
								char					* entityName
							)
{
	return	sdaiIsKindOfBN(
					instance,
					(const char*) entityName
				);
}
SdaiPrimitiveType	DECL STDC	engiGetAttrType(
									const SdaiAttr			attribute
								);
SdaiPrimitiveType	DECL STDC	engiGetAttrTypeBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiPrimitiveType	engiGetAttrTypeBN(
											SdaiEntity				entity,
											char					* attributeName
										)
{
	return	engiGetAttrTypeBN(
					entity,
					(const char*) attributeName
				);
}
SdaiPrimitiveType	DECL STDC	engiGetInstanceAttrType(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
SdaiPrimitiveType	DECL STDC	engiGetInstanceAttrTypeBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiPrimitiveType	engiGetInstanceAttrTypeBN(
											SdaiInstance			instance,
											char					* attributeName
										)
{
	return	engiGetInstanceAttrTypeBN(
					instance,
					(const char*) attributeName
				);
}
int_t			DECL STDC	sdaiIsInstanceOf(
									SdaiInstance			instance,
									SdaiEntity				entity
								);
int_t			DECL STDC	sdaiIsInstanceOfBN(
									SdaiInstance			instance,
									const char				* entityName
								);
static	inline	int_t	sdaiIsInstanceOfBN(
								SdaiInstance			instance,
								char					* entityName
							)
{
	return	sdaiIsInstanceOfBN(
					instance,
					(const char*) entityName
				);
}
bool			DECL STDC	sdaiIsEqual(
									SdaiInstance			instanceI,
									SdaiInstance			instanceII
								);
int_t			DECL STDC	sdaiValidateAttribute(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
int_t			DECL STDC	sdaiValidateAttributeBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	int_t	sdaiValidateAttributeBN(
								SdaiInstance			instance,
								char					* attributeName
							)
{
	return	sdaiValidateAttributeBN(
					instance,
					(const char*) attributeName
				);
}
char			DECL * STDC	engiGetInstanceClassInfo(
									SdaiInstance			instance
								);
char			DECL * STDC	engiGetInstanceClassInfoUC(
									SdaiInstance			instance
								);
int_t			DECL STDC	engiGetInstanceMetaInfo(
									SdaiInstance			instance,
									int_t					* localId,
									const char				** entityName,
									const char				** entityNameUC
								);
static	inline	int_t	engiGetInstanceMetaInfo(
								SdaiInstance			instance,
								int_t					* localId,
								char					** entityName,
								char					** entityNameUC
							)
{
	return	engiGetInstanceMetaInfo(
					instance,
					localId,
					(const char**) entityName,
					(const char**) entityNameUC
				);
}
int_t			DECL STDC	sdaiFindInstanceUsers(
									SdaiInstance			instance,
									int_t					domain,
									int_t					resultList
								);
int_t			DECL STDC	sdaiFindInstanceUsedInBN(
									SdaiInstance			instance,
									const char				* roleName,
									int_t					domain,
									int_t					resultList
								);
static	inline	int_t	sdaiFindInstanceUsedInBN(
								SdaiInstance			instance,
								char					* roleName,
								int_t					domain,
								int_t					resultList
							)
{
	return	sdaiFindInstanceUsedInBN(
					instance,
					(const char*) roleName,
					domain,
					resultList
				);
}
void			DECL STDC	sdaiPrepend(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPrepend(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPrepend(
					aggregate,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiAppend(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiAppend(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiAppend(
					aggregate,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiAdd(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiAdd(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiAdd(
					aggregate,
					valueType,
					(const void*) value
				);
}