ifcviewer/ifcengine/include/IfcEngine.cs


		/// <summary>
		///		sdaiGetAggregationAttrBN                                (http://rdf.bg/ifcdoc/CS64/sdaiGetAggregationAttrBN.html)
		///
		///	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiAGGR.
		///	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		///	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggregationAttrBN")]
		public static extern int_t sdaiGetAggregationAttrBN(int_t instance, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggregationAttrBN")]
		public static extern int_t sdaiGetAggregationAttrBN(int_t instance, byte[] attributeName);

		/// <summary>
		///		sdaiGetAttrDefinition                                   (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrDefinition.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
		public static extern int_t sdaiGetAttrDefinition(int_t entity, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
		public static extern int_t sdaiGetAttrDefinition(int_t entity, byte[] attributeName);

		/// <summary>
		///		sdaiGetInstanceType                                     (http://rdf.bg/ifcdoc/CS64/sdaiGetInstanceType.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetInstanceType")]
		public static extern int_t sdaiGetInstanceType(int_t instance);

		/// <summary>
		///		sdaiGetMemberCount                                      (http://rdf.bg/ifcdoc/CS64/sdaiGetMemberCount.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetMemberCount")]
		public static extern int_t sdaiGetMemberCount(int_t aggregate);

		/// <summary>
		///		sdaiIsKindOf                                            (http://rdf.bg/ifcdoc/CS64/sdaiIsKindOf.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsKindOf")]
		public static extern int_t sdaiIsKindOf(int_t instance, int_t entity);

		/// <summary>
		///		sdaiIsKindOfBN                                          (http://rdf.bg/ifcdoc/CS64/sdaiIsKindOfBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsKindOfBN")]
		public static extern int_t sdaiIsKindOfBN(int_t instance, string entityName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsKindOfBN")]
		public static extern int_t sdaiIsKindOfBN(int_t instance, byte[] entityName);

		/// <summary>
		///		engiGetAttrType                                         (http://rdf.bg/ifcdoc/CS64/engiGetAttrType.html)
		///
		///	Returns primitive SDAI data type for the attribute according to schema, e.g. sdaiINTEGER
		///
		///	In case of aggregation if will return base primitive type combined with engiTypeFlagAggr, e.g. sdaiINTEGER|engiTypeFlagAggr
		///
		///	For SELECT it will return sdaiINSTANCE if all options are instances or aggegation of instances, either sdaiADB
		///	In case of SELECT and sdaiINSTANCE, return value will be combined with engiTypeFlagAggrOption if some options are aggregation
		///	or engiTypeFlagAggr if all options are aggregations of instances
		///
		///	It works for direct and inverse attributes
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrType")]
		public static extern int_t engiGetAttrType(int_t attribute);

		/// <summary>
		///		engiGetAttrTypeBN                                       (http://rdf.bg/ifcdoc/CS64/engiGetAttrTypeBN.html)
		///
		///	Combines sdaiGetAttrDefinition and engiGetAttrType
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrTypeBN")]
		public static extern int_t engiGetAttrTypeBN(int_t entity, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrTypeBN")]
		public static extern int_t engiGetAttrTypeBN(int_t entity, byte[] attributeName);

		/// <summary>
		///		engiGetInstanceAttrType                                 (http://rdf.bg/ifcdoc/CS64/engiGetInstanceAttrType.html)
		///
		///	Returns SDAI type for actual data stored in the instance for the attribute
		///	It may be primitive type, sdaiAGGR or sdaiADB
		///	Returns 0 for $ and * 
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceAttrType")]
		public static extern int_t engiGetInstanceAttrType(int_t instance, int_t attribute);

		/// <summary>
		///		engiGetInstanceAttrTypeBN                               (http://rdf.bg/ifcdoc/CS64/engiGetInstanceAttrTypeBN.html)
		///
		///	Combines sdaiGetAttrDefinition and engiGetInstanceAttrType
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceAttrTypeBN")]
		public static extern int_t engiGetInstanceAttrTypeBN(int_t instance, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceAttrTypeBN")]
		public static extern int_t engiGetInstanceAttrTypeBN(int_t instance, byte[] attributeName);

		/// <summary>
		///		sdaiIsInstanceOf                                        (http://rdf.bg/ifcdoc/CS64/sdaiIsInstanceOf.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsInstanceOf")]
		public static extern int_t sdaiIsInstanceOf(int_t instance, int_t entity);

		/// <summary>
		///		sdaiIsInstanceOfBN                                      (http://rdf.bg/ifcdoc/CS64/sdaiIsInstanceOfBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsInstanceOfBN")]
		public static extern int_t sdaiIsInstanceOfBN(int_t instance, string entityName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsInstanceOfBN")]
		public static extern int_t sdaiIsInstanceOfBN(int_t instance, byte[] entityName);

		/// <summary>
		///		sdaiIsEqual                                             (http://rdf.bg/ifcdoc/CS64/sdaiIsEqual.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiIsEqual")]
		public static extern byte sdaiIsEqual(int_t instanceI, int_t instanceII);

		/// <summary>
		///		sdaiValidateAttribute                                   (http://rdf.bg/ifcdoc/CS64/sdaiValidateAttribute.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiValidateAttribute")]
		public static extern int_t sdaiValidateAttribute(int_t instance, int_t attribute);

		/// <summary>
		///		sdaiValidateAttributeBN                                 (http://rdf.bg/ifcdoc/CS64/sdaiValidateAttributeBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiValidateAttributeBN")]
		public static extern int_t sdaiValidateAttributeBN(int_t instance, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiValidateAttributeBN")]
		public static extern int_t sdaiValidateAttributeBN(int_t instance, byte[] attributeName);

		/// <summary>
		///		engiGetInstanceClassInfo                                (http://rdf.bg/ifcdoc/CS64/engiGetInstanceClassInfo.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceClassInfo")]
		public static extern IntPtr engiGetInstanceClassInfo(int_t instance);

		/// <summary>
		///		engiGetInstanceClassInfoUC                              (http://rdf.bg/ifcdoc/CS64/engiGetInstanceClassInfoUC.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceClassInfoUC")]
		public static extern IntPtr engiGetInstanceClassInfoUC(int_t instance);

		/// <summary>
		///		engiGetInstanceMetaInfo                                 (http://rdf.bg/ifcdoc/CS64/engiGetInstanceMetaInfo.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetInstanceMetaInfo")]
		public static extern int_t engiGetInstanceMetaInfo(int_t instance, out int_t localId, out IntPtr entityName, out IntPtr entityNameUC);

		/// <summary>
		///		sdaiFindInstanceUsers                                   (http://rdf.bg/ifcdoc/CS64/sdaiFindInstanceUsers.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiFindInstanceUsers")]
		public static extern int_t sdaiFindInstanceUsers(int_t instance, int_t domain, int_t resultList);

		/// <summary>
		///		sdaiFindInstanceUsedInBN                                (http://rdf.bg/ifcdoc/CS64/sdaiFindInstanceUsedInBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiFindInstanceUsedInBN")]
		public static extern int_t sdaiFindInstanceUsedInBN(int_t instance, string roleName, int_t domain, int_t resultList);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiFindInstanceUsedInBN")]
		public static extern int_t sdaiFindInstanceUsedInBN(int_t instance, byte[] roleName, int_t domain, int_t resultList);

        //
        //  Instance Writing API Calls
        //

		/// <summary>
		///		sdaiPrepend                                             (http://rdf.bg/ifcdoc/CS64/sdaiPrepend.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPrepend")]
		public static extern void sdaiPrepend(int_t list, int_t valueType, ref int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPrepend")]
		public static extern void sdaiPrepend(int_t list, int_t valueType, int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPrepend")]
		public static extern void sdaiPrepend(int_t list, int_t valueType, ref double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPrepend")]
		public static extern void sdaiPrepend(int_t list, int_t valueType, ref IntPtr value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPrepend")]
		public static extern void sdaiPrepend(int_t list, int_t valueType, byte[] value);

		/// <summary>
		///		sdaiAppend                                              (http://rdf.bg/ifcdoc/CS64/sdaiAppend.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, ref int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, ref double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, ref IntPtr value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, byte[] value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, string value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAppend")]
		public static extern void sdaiAppend(int_t list, int_t valueType, ref bool value);

		/// <summary>
		///		sdaiAdd                                                 (http://rdf.bg/ifcdoc/CS64/sdaiAdd.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAdd")]
		public static extern void sdaiAdd(int_t list, int_t valueType, ref int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAdd")]
		public static extern void sdaiAdd(int_t list, int_t valueType, int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAdd")]
		public static extern void sdaiAdd(int_t list, int_t valueType, ref double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAdd")]
		public static extern void sdaiAdd(int_t list, int_t valueType, ref IntPtr value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiAdd")]
		public static extern void sdaiAdd(int_t list, int_t valueType, byte[] value);
